# kidguard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Plan.md  README.md  config.example.yaml  docker-compose.yml
migrations/: 001_initial.sql
src/: config.rs  main.rs
src/analyzer/: aggregator.rs  mod.rs  openai.rs
src/blocklist/: loader.rs  matcher.rs  mod.rs  sync.rs
src/dns/: arp.rs  forwarder.rs  handler.rs  mod.rs  server.rs
src/logger/: db.rs
src/reporter/: email.rs
