[package]
name = "kidguard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# DNS
hickory-server = "0.24"
hickory-resolver = "0.24"
hickory-proto = "0.24"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

# HTTP (blocklist sync + OpenAI API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.14"

# Scheduling
tokio-cron-scheduler = "0.10"

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
